--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ on:
       aws-statefile-s3-bucket:
         type: string
         required: true
-      aws-lock-dynamodb-talbe:
+      aws-lock-dynamodb-table:
         type: string
         required: true
 
