--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     uses: ./.github/workflows/terraform.yml
     with:
       environment: prod
-      aws-assume-role-arn: "arn:aws:iam::073122651566:role/github-actions-carlosalves77-pipeline"
-      aws-region: "us-east-1"
-      aws-statefile-s3-bucket: "carlosalves77-us-east-1-terraform-statefile"
-      aws-lock-dynamodb-table: "carlosalves77-us-east-1-terraform-lock"
+      aws-assume-role-arn: "<arn-role-aws>"
+      aws-region: "<região-aws>"
+      aws-statefile-s3-bucket: "<nome-bucket-s3>"
+      aws-lock-dynamodb-table: "<nome-tabela-dynamodb>"
